gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "192.168.100.240" # This is from the ip-pool range
  listeners:
    - protocol: HTTP
      port: 80
      name: tailscale-gateway-listener
      hostname: "*.notothen-liberty.ts.net"
      allowedRoutes:
        namespaces:
          from: All
